--- a/styles.css
+++ b/styles.css
@@ -1052,7 +1052,7 @@ footer a:hover {
 
 .dot1Text {
     position: relative;
-    bottom: calc(100% + 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
@@ -1064,7 +1064,7 @@ footer a:hover {
 
 .dot2Text {
     position: relative;
-    bottom: calc(100% - 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
@@ -1076,7 +1076,7 @@ footer a:hover {
 
 .dot3Text {
     position: relative;
-    bottom: calc(100% + 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
@@ -1088,7 +1088,7 @@ footer a:hover {
 
 .dot4Text {
     position: relative;
-    bottom: calc(100% - 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
@@ -1100,7 +1100,7 @@ footer a:hover {
 
 .dot5Text {
     position: relative;
-    bottom: calc(100% + 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
@@ -1112,7 +1112,7 @@ footer a:hover {
 
 .dot6Text {
     position: relative;
-    bottom: calc(100% - 3em);
+    bottom: 3.75em;
     display: inline-block;
     white-space: nowrap;
     transform: translateX(-50%);
