--- a/styles.css
+++ b/styles.css
@@ -1525,6 +1525,7 @@ footer a:hover {
     .dot5,
     .dot6 {
         top: -16px;
+        font-size: 8px;
     }
     .dotHolder {
         max-width: 229.5px;
